src/style.css
:root {
  --primary-color: #8f298a;
  --secondary-color: #eeeeff;
  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
  --font-family: "Mona Sans", serif;
}

body {
  margin-top: 100px;
  padding: 15px;
  font-family: var(--font-family);
  font-optical-sizing: auto;
  background-color: var(--secondary-color);
}

h1,
h2,
h3 {
  margin: 0;
}

h1 {
  font-size: 80px;
  font-weight: bold;
}

h2 {
  font-size: 36px;
}

h3 {
  font-size: 20px;
  opacity: 0.7;
}

p {
  font-size: 18px;
  line-height: 1.6;
}

.navigation-links {
  display: flex;
  margin-top: 40px;
  justify-content: center;
}

.navigation-links a {
  margin: 18px;
  border-radius: 4px;
  padding: 20px 15px;
  text-decoration: none;
}

.contact-link {
  background: var(--primary-color);
  box-shadow: var(--box-shadow);
  color: white;
}

#contact {
  font-size: 28px;
}

.about-link {
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
  justify-content: center;
}

.homepage-link {
  color: var(--primary-color);
  text-align: center;
  display: block;
}

.email-link {
  display: flex;
  justify-content: center;
  color: var(--primary-color);
  text-decoration: none;
  line-height: 1.6;
  font-size: 28px;
}

.email-link:hover {
  text-decoration: underline;
}

.primary-link {
  border-radius: 4px;
  padding: 20px 15px;
  text-decoration: none;
  text-transform: capitalize;
  background: var(--primary-color);
  box-shadow: var(--box-shadow);
  color: white;
}

.secondary-link {
  border-radius: 4px;
  padding: 20px 15px;
  text-decoration: none;
  text-transform: capitalize;
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
}

.bg-custom {
  background-color: rgba(224, 220, 220, 0.8);
}

.bg-link-custom {
  color: black;
}

.about-images {
  justify-content: center;
}

